adding posts controllers and swagger documentation
